# AamarPay-RNR-Room-superapp-API

./: .gitignore  .manage.py.swp  Dockerfile  db.sqlite3  deploy.sh  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: development.yml
core/: renderers.py  settings.py  test.env  urls.py
deployment/: deployscript
main/: adapters.py  admin.py  middleware.py  models.py
main/api/: serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_rnruser_rnraccesstoken_rnr_user.py
payment/: admin.py  models.py  payment_gateway_config.py  payment_gateway_utils.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py
rnr/: adapters.py  admin.py  apps.py  models.py  signals.py  utils.py
rnr/api/: permissions.py  renderer.py  serializers.py  urls.py  views.py
rnr/management/commands/: get_rnr_token.py
rnr/migrations/: 0001_initial.py  0002_rnrroomcompare.py  0003_delete_rnrroomcompare.py  0004_rnrroomreservation.py  0005_rnrroomreservation_is_active.py  0006_alter_rnrroomreservation_rnr_transaction_code.py  0007_rnrroomreservationrefund.py  0008_rnrroomreservation_mer_txid_and_more.py  0009_alter_rnrroomreservation_property_id_and_more.py  0010_alter_rnrroomreservation_property_id_and_more.py  0011_rnrroomreservation_rooms.py  0012_rnrroomreservation_guest_address_and_more.py  0013_userroompurchasehistory.py  0014_userroompurchaseconfirmresponselog.py  0015_alter_rnrroomreservation_user.py
services/: constants.py  exception_handler.py  helper_functions.py  validators.py
